Fix layout issues when more than 5 apps are available.

--- a/src/app/pages/store/store.component.scss
+++ b/src/app/pages/store/store.component.scss
@@ -8,7 +8,8 @@ main {
 }
 
 .featured {
-  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 209px;
   padding: $baseline-2 25px;
   text-decoration: none;
 
@@ -28,6 +29,7 @@ main {
 .container {
   padding: $baseline-2 25px $baseline-2 25px;
   background: #000000F0;
+  overflow-y: scroll;
 }
 
 .all {
